Fixing nav icon issue, replacing background-attachment: fixed to global div behind the page, because in safari this option is not supported

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -37,3 +37,14 @@ body {
 
   grid-template-columns: 100%;
 }
+
+.background {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  background: linear-gradient(rgba($color-second, 0.4), rgba($color-third, 0.4)),
+    url(../img/images/header-background.jpg);
+  background-position-y: 50%;
+  height: 100%;
+  width: 100%;
+}
