--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -2,12 +2,7 @@
   grid-row: gallery-start / gallery-end;
   padding: 3rem 0 10rem 0;
 
-  background: linear-gradient(rgba($color-second, 0.4), rgba($color-third, 0.4)),
-    url(../img/images/header-background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
+  background: transparent;
 
   overflow: hidden;
 
