--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -52,26 +52,27 @@
     position: absolute;
     top: 0;
     right: 2rem;
-    width: 5rem;
+    width: var(--nav-height);
     height: var(--nav-height);
 
     display: none;
 
     &__icon {
-      width: 100%;
-      height: 100%;
-
       path {
         fill: white;
       }
     }
 
     @include respond(tablet) {
-      display: block;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      transform: scale(0.7);
     }
 
-    @include respond(phone) {
-      width: 4rem;
+    @include respond(tablet) {
+      transform: scale(1.5);
     }
   }
 
